Content image commit

--- a/index.html
+++ b/index.html
@@ -88,6 +88,10 @@
                 </nav>
             </div>
         </header>
+        <section class="content">
+            <div class="content-images"></div>
+            <div class="content-sidebar"></div>
+        </section>
     </div>
 </body>
 </html>
