--- a/index.html
+++ b/index.html
@@ -86,6 +86,19 @@
                         </li>
                     </ul>
                 </nav>
+                <div class="categories">
+                    <ul class="main-categories">
+                        <li class="categoriesListedItems"><a href="#">KADIN</a></li>
+                        <li class="categoriesListedItems"><a href="#">ERKEK</a></li>
+                        <li class="categoriesListedItems"><a href="#">ÇOCUK</a></li>
+                        <li class="categoriesListedItems"><a href="#">EV&YAŞAM</a></li>
+                        <li class="categoriesListedItems"><a href="#">SÜPERMARKET</a></li>
+                        <li class="categoriesListedItems"><a href="#">KOZMETİK</a></li>
+                        <li class="categoriesListedItems"><a href="#">AYAKKABI&ÇANTA</a></li>
+                        <li class="categoriesListedItems"><a href="#">SAAT&AKSESUAR</a></li>
+                        <li class="categoriesListedItems"><a href="#">ELEKTRONİK</a></li>
+                    </ul>
+                </div>
             </div>
         </header>
     </div>
