Co-authored-by: Kayra Berk Tuncer <kayrabtuncer@gmail.com>

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         </header>
         <section class="content">
             <div class="content-images">
-                <article class="content-item">
+                <div class="content-item">
                     <a href="/">
                         <img src="assets/images/content-image.svg" alt="Content Image" />
                         <div class="content-footer">
@@ -115,13 +115,13 @@
                             </p>
                         </div>
                     </a>
-                </article>
+                </div>
                 <article class="content-item">
                     <a href="/">
                         <img src="assets/images/content-image.svg" alt="Content Image" />
                         <div class="content-footer">
                             <p class="footer-text">
-                                Flaş 500 Ürün Saat & Gözlük
+                                Saatte Dev İndirim
                             </p>
                         </div>
                     </a>
