Co-authored-by: Kayra Berk Tuncer <kayrabtuncer@gmail.com> Co-authored-by: Beril Gökçe Çiçek <gokcecicek@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         </header>
         <section class="content">
             <div class="content-images">
-                <div class="content-item">
+                <article class="content-item">
                     <a href="/">
                         <img src="assets/images/content-image.svg" alt="Content Image" />
                         <div class="content-footer">
@@ -115,7 +115,7 @@
                             </p>
                         </div>
                     </a>
-                </div>
+                </article>
                 <article class="content-item">
                     <a href="/">
                         <img src="assets/images/content-image.svg" alt="Content Image" />
