Add footer hover

--- a/index.html
+++ b/index.html
@@ -113,6 +113,10 @@
                             <p class="footer-text">
                                 Flaş 500 Ürün Saat & Gözlük
                             </p>
+                            <p class="footer-text-hover">
+                                Alışverişe Başla
+                                <img src="assets/icons/icon-arrow.svg" alt="Arrow icon" />
+                            </p>
                         </div>
                     </a>
                 </article>
@@ -122,6 +126,10 @@
                         <div class="content-footer">
                             <p class="footer-text">
                                 Saatte Dev İndirim
+                            </p>
+                            <p class="footer-text-hover">
+                                Alışverişe Başla
+                                <img src="assets/icons/icon-arrow.svg" alt="Arrow icon" />
                             </p>
                         </div>
                     </a>
