Add product list content header

--- a/index.html
+++ b/index.html
@@ -1169,49 +1169,24 @@
         </div>    
     <!--End of Popular Brands Section-->
 
-    <section class="content">
-        <div class="content-images">
-            <article class="content-item">
-                <a href="">
-                    <img src="assets/images/content-image.svg" alt="Content Image" />
-                    <div class="content-footer">
-                        <p class="footer-text">
-                            Flaş 500 Ürün Saat & Gözlük
-                        </p>
-                        <p class="footer-text-hover">
-                            Alışverişe Başla
-                            <img src="assets/icons/icon-arrow.svg" alt="Arrow icon" />
-                        </p>
-                    </div>
-                </a>
-            </article>
-            <article class="content-item">
-                <a href="">
-                    <img src="assets/images/content-image.svg" alt="Content Image" />
-                    <div class="content-footer">
-                        <p class="footer-text">
-                            Saatte Dev İndirim
-                        </p>
-                        <p class="footer-text-hover">
-                            Alışverişe Başla
-                            <img src="assets/icons/icon-arrow.svg" alt="Arrow icon" />
-                        </p>
-                    </div>
-                </a>
-            </article>
+    <section class="product-content">
+       <div class="product-content-header">
+        <div class="product-result">
+            “Kadın Giyim” araması için 100.000+ sonuç listeleniyor
         </div>
-        <aside class="content-sidebar">
-            <article class="content-sidebar-item">
-                <a href="">
-                    <img src="assets/images/content-image-sidebar.svg" alt="Content Sidebar Image" class="right-image-content" />
-                </a>
-            </article>
-            <article class="content-sidebar-item">
-                <a href="">
-                    <img src="assets/images/content-image-sidebar.svg" alt="Content Sidebar Image" class="right-image-content" />
-                </a>
-            </article>
-        </aside>
+        <select class="product-options">
+            <option value="SCORE">Önerilen</option>
+            <option value="PRICE_BY_ASC">En Düşük Fiyat</option>
+            <option value="PRICE_BY_DESC">En Yüksek Fiyat</option>
+            <option value="MOST_RECENT">En Yeniler</option>
+            <option value="BEST_SELLER">Çok Satanlar</option>
+            <option value="MOST_FAVOURITE">En Favoriler</option>
+            <option value="MOST_RATED">En Çok Değerlendirilenler</option>
+        </select>
+       </div>
+       <div class="product-content-items">
+
+       </div>
     </section>
 
     <!-- Start Footer -->
