Create product image

--- a/index.html
+++ b/index.html
@@ -1185,7 +1185,12 @@
         </select>
        </div>
        <div class="product-content-items">
-
+           <article class="product-item">
+               <a href="/">
+                <img src="assets/images/product-content-image.svg"/>
+               </a>
+               <img src="assets/icons/icon-favorite-ellipse.svg"/>
+           </article>
        </div>
     </section>
 
