--- a/index.html
+++ b/index.html
@@ -1186,10 +1186,24 @@
        </div>
        <div class="product-content-items">
            <article class="product-item">
-               <a href="/">
-                <img src="assets/images/product-content-image.svg"/>
-               </a>
-               <img src="assets/icons/icon-favorite-ellipse.svg"/>
+               <div class="product-item-image">
+                <a href="/">
+                    <img src="assets/images/product-content-image.svg"/>
+                </a>
+                    <div class="product-icon-ellipse">
+                        <img src="assets/icons/icon-favorite-ellipse.svg"/>
+                    </div>
+               </div>
+               <!-- <div class="product-item-detail">
+                <p>
+                    <strong>TRENDYOLMİLLA</strong>
+                    Camel Dantelli
+                    Örme Pijama Takımı...
+                </p>
+               </div>
+               <div class="product-item-sale">
+                    Sale
+               </div> -->
            </article>
        </div>
     </section>
