--- a/index.html
+++ b/index.html
@@ -1194,7 +1194,7 @@
                         <img src="assets/icons/icon-favorite-ellipse.svg"/>
                     </div>
                </div>
-               <!-- <div class="product-item-detail">
+               <div class="product-item-detail">
                 <p>
                     <strong>TRENDYOLMİLLA</strong>
                     Camel Dantelli
@@ -1203,8 +1203,38 @@
                </div>
                <div class="product-item-sale">
                     Sale
-               </div> -->
+               </div>
            </article>
+           <article class="product-item">
+            <div class="product-item-image">
+             <a href="/">
+                 <img src="assets/images/product-content-image.svg"/>
+             </a>
+                 <div class="product-icon-ellipse">
+                     <img src="assets/icons/icon-favorite-ellipse.svg"/>
+                 </div>
+            </div>
+            <div class="product-item-detail">
+             <p>
+                 <strong>TRENDYOLMİLLA</strong>
+                 Camel Dantelli
+                 Örme Pijama Takımı...
+             </p>
+             <div class="product-item-detail-rating">
+                 <img src="assets/icons/icon-star.svg"/>
+                 <img src="assets/icons/icon-star.svg"/>
+                 <img src="assets/icons/icon-star.svg"/>
+                 <img src="assets/icons/icon-star.svg"/>
+                 <img src="assets/icons/icon-star.svg"/>
+                 <p>(636)</p>
+             </div>
+             <p>79.99 TL</p>
+            </div>
+            <div class="product-item-sale">
+                 Sale
+            </div>
+            
+        </article>
        </div>
     </section>
 
