add some comments to index.html

--- a/index.html
+++ b/index.html
@@ -12,11 +12,14 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+    <!-- start container -->
     <div class="container">
+        <!-- top banner -->
         <section class="top-banner">
             <img src="assets/images/top-banner.jpg" alt="Trendyol üst kampanya banner">
         </section>
-
+        <!-- top banner -->
+        <!-- start header -->
         <header>
             <div class="header-links">
                 <a href="https://partner.trendyol.com/onboarding/satici-formu">Trendyol'da Satış Yap</a>
@@ -1096,6 +1099,7 @@
                 </div>
             </div>
         </header>
+        <!-- end header -->
         <!--Popular Brands Section-->
         <div class="popular-brands">
             <ul class="popular-brands-list">
@@ -1168,7 +1172,7 @@
             </ul>
         </div>    
     <!--End of Popular Brands Section-->
-
+    <!-- Start Content -->
     <section class="content">
         <div class="content-images">
             <article class="content-item">
@@ -1213,6 +1217,7 @@
             </article>
         </aside>
     </section>
+    <!-- End Content -->
 
     <!-- Start Footer -->
     <footer>
@@ -1222,5 +1227,6 @@
     </footer>
     <!-- End Footer -->
 </div>
+<!-- End Container -->
 </body>
 </html>
