--- a/index.html
+++ b/index.html
@@ -1185,33 +1185,15 @@
         </select>
        </div>
        <div class="product-content-items">
-           <article class="product-item">
-               <div class="product-item-image">
-                <a href="/">
-                    <img src="assets/images/product-content-image.svg"/>
-                </a>
-                    <div class="product-icon-ellipse">
-                        <img src="assets/icons/icon-favorite-ellipse.svg"/>
-                    </div>
-               </div>
-               <div class="product-item-detail">
-                <p>
-                    <strong>TRENDYOLMİLLA</strong>
-                    Camel Dantelli
-                    Örme Pijama Takımı...
-                </p>
-               </div>
-               <div class="product-item-sale">
-                    Sale
-               </div>
-           </article>
-           <article class="product-item">
+        <article class="product-item">
             <div class="product-item-image">
              <a href="/">
                  <img src="assets/images/product-content-image.svg"/>
              </a>
                  <div class="product-icon-ellipse">
-                     <img src="assets/icons/icon-favorite-ellipse.svg"/>
+                     <div class="product-icon-favorite">
+                        <img src="assets/icons/icon-favorite.svg"/>
+                     </div>
                  </div>
             </div>
             <div class="product-item-detail">
@@ -1231,9 +1213,225 @@
              <p>79.99 TL</p>
             </div>
             <div class="product-item-sale">
-                 Sale
+                <p>Sepette %30 İNDİRİM <span>55.90TL</span></p>
             </div>
-            
+        </article>
+        <article class="product-item">
+            <div class="product-item-image">
+             <a href="/">
+                 <img src="assets/images/product-content-image.svg"/>
+             </a>
+                 <div class="product-icon-ellipse">
+                     <div class="product-icon-favorite">
+                        <img src="assets/icons/icon-favorite.svg"/>
+                     </div>
+                 </div>
+            </div>
+            <div class="product-item-detail">
+             <p>
+                 <strong>TRENDYOLMİLLA</strong>
+                 Camel Dantelli
+                 Örme Pijama Takımı...
+             </p>
+             <div class="product-item-detail-rating">
+                 <img src="assets/icons/icon-star.svg"/>
+                 <img src="assets/icons/icon-star.svg"/>
+                 <img src="assets/icons/icon-star.svg"/>
+                 <img src="assets/icons/icon-star.svg"/>
+                 <img src="assets/icons/icon-star.svg"/>
+                 <p>(636)</p>
+             </div>
+             <p>79.99 TL</p>
+            </div>
+            <div class="product-item-sale">
+                <p>Sepette %30 İNDİRİM <span>55.90TL</span></p>
+            </div>
+        </article>
+        <article class="product-item">
+            <div class="product-item-image">
+             <a href="/">
+                 <img src="assets/images/product-content-image.svg"/>
+             </a>
+                 <div class="product-icon-ellipse">
+                     <div class="product-icon-favorite">
+                        <img src="assets/icons/icon-favorite.svg"/>
+                     </div>
+                 </div>
+            </div>
+            <div class="product-item-detail">
+             <p>
+                 <strong>TRENDYOLMİLLA</strong>
+                 Camel Dantelli
+                 Örme Pijama Takımı...
+             </p>
+             <div class="product-item-detail-rating">
+                 <img src="assets/icons/icon-star.svg"/>
+                 <img src="assets/icons/icon-star.svg"/>
+                 <img src="assets/icons/icon-star.svg"/>
+                 <img src="assets/icons/icon-star.svg"/>
+                 <img src="assets/icons/icon-star.svg"/>
+                 <p>(636)</p>
+             </div>
+             <p>79.99 TL</p>
+            </div>
+            <div class="product-item-sale">
+                <p>Sepette %30 İNDİRİM <span>55.90TL</span></p>
+            </div>
+        </article>
+        <article class="product-item">
+            <div class="product-item-image">
+             <a href="/">
+                 <img src="assets/images/product-content-image.svg"/>
+             </a>
+                 <div class="product-icon-ellipse">
+                     <div class="product-icon-favorite">
+                        <img src="assets/icons/icon-favorite.svg"/>
+                     </div>
+                 </div>
+            </div>
+            <div class="product-item-detail">
+             <p>
+                 <strong>TRENDYOLMİLLA</strong>
+                 Camel Dantelli
+                 Örme Pijama Takımı...
+             </p>
+             <div class="product-item-detail-rating">
+                 <img src="assets/icons/icon-star.svg"/>
+                 <img src="assets/icons/icon-star.svg"/>
+                 <img src="assets/icons/icon-star.svg"/>
+                 <img src="assets/icons/icon-star.svg"/>
+                 <img src="assets/icons/icon-star.svg"/>
+                 <p>(636)</p>
+             </div>
+             <p>79.99 TL</p>
+            </div>
+            <div class="product-item-sale">
+                <p>Sepette %30 İNDİRİM <span>55.90TL</span></p>
+            </div>
+        </article>
+        <article class="product-item">
+            <div class="product-item-image">
+             <a href="/">
+                 <img src="assets/images/product-content-image.svg"/>
+             </a>
+                 <div class="product-icon-ellipse">
+                     <div class="product-icon-favorite">
+                        <img src="assets/icons/icon-favorite.svg"/>
+                     </div>
+                 </div>
+            </div>
+            <div class="product-item-detail">
+             <p>
+                 <strong>TRENDYOLMİLLA</strong>
+                 Camel Dantelli
+                 Örme Pijama Takımı...
+             </p>
+             <div class="product-item-detail-rating">
+                 <img src="assets/icons/icon-star.svg"/>
+                 <img src="assets/icons/icon-star.svg"/>
+                 <img src="assets/icons/icon-star.svg"/>
+                 <img src="assets/icons/icon-star.svg"/>
+                 <img src="assets/icons/icon-star.svg"/>
+                 <p>(636)</p>
+             </div>
+             <p>79.99 TL</p>
+            </div>
+            <div class="product-item-sale">
+                <p>Sepette %30 İNDİRİM <span>55.90TL</span></p>
+            </div>
+        </article>
+        <article class="product-item">
+            <div class="product-item-image">
+             <a href="/">
+                 <img src="assets/images/product-content-image.svg"/>
+             </a>
+                 <div class="product-icon-ellipse">
+                     <div class="product-icon-favorite">
+                        <img src="assets/icons/icon-favorite.svg"/>
+                     </div>
+                 </div>
+            </div>
+            <div class="product-item-detail">
+             <p>
+                 <strong>TRENDYOLMİLLA</strong>
+                 Camel Dantelli
+                 Örme Pijama Takımı...
+             </p>
+             <div class="product-item-detail-rating">
+                 <img src="assets/icons/icon-star.svg"/>
+                 <img src="assets/icons/icon-star.svg"/>
+                 <img src="assets/icons/icon-star.svg"/>
+                 <img src="assets/icons/icon-star.svg"/>
+                 <img src="assets/icons/icon-star.svg"/>
+                 <p>(636)</p>
+             </div>
+             <p>79.99 TL</p>
+            </div>
+            <div class="product-item-sale">
+                <p>Sepette %30 İNDİRİM <span>55.90TL</span></p>
+            </div>
+        </article>
+        <article class="product-item">
+            <div class="product-item-image">
+             <a href="/">
+                 <img src="assets/images/product-content-image.svg"/>
+             </a>
+                 <div class="product-icon-ellipse">
+                     <div class="product-icon-favorite">
+                        <img src="assets/icons/icon-favorite.svg"/>
+                     </div>
+                 </div>
+            </div>
+            <div class="product-item-detail">
+             <p>
+                 <strong>TRENDYOLMİLLA</strong>
+                 Camel Dantelli
+                 Örme Pijama Takımı...
+             </p>
+             <div class="product-item-detail-rating">
+                 <img src="assets/icons/icon-star.svg"/>
+                 <img src="assets/icons/icon-star.svg"/>
+                 <img src="assets/icons/icon-star.svg"/>
+                 <img src="assets/icons/icon-star.svg"/>
+                 <img src="assets/icons/icon-star.svg"/>
+                 <p>(636)</p>
+             </div>
+             <p>79.99 TL</p>
+            </div>
+            <div class="product-item-sale">
+                <p>Sepette %30 İNDİRİM <span>55.90TL</span></p>
+            </div>
+        </article>
+        <article class="product-item">
+            <div class="product-item-image">
+             <a href="/">
+                 <img src="assets/images/product-content-image.svg"/>
+             </a>
+                 <div class="product-icon-ellipse">
+                     <div class="product-icon-favorite">
+                        <img src="assets/icons/icon-favorite.svg"/>
+                     </div>
+                 </div>
+            </div>
+            <div class="product-item-detail">
+             <p>
+                 <strong>TRENDYOLMİLLA</strong>
+                 Camel Dantelli
+                 Örme Pijama Takımı...
+             </p>
+             <div class="product-item-detail-rating">
+                 <img src="assets/icons/icon-star.svg"/>
+                 <img src="assets/icons/icon-star.svg"/>
+                 <img src="assets/icons/icon-star.svg"/>
+                 <img src="assets/icons/icon-star.svg"/>
+                 <img src="assets/icons/icon-star.svg"/>
+                 <p>(636)</p>
+             </div>
+             <p>79.99 TL</p>
+            </div>
+            <div class="product-item-sale">
+                <p>Sepette %30 İNDİRİM <span>55.90TL</span></p>
+            </div>
         </article>
        </div>
     </section>
