add filter sidebar (not completed)

--- a/index.html
+++ b/index.html
@@ -1099,126 +1099,56 @@
                 </div>
             </div>
         </header>
-        <!-- end header -->
-        <!--Popular Brands Section-->
-        <div class="popular-brands">
-            <ul class="popular-brands-list">
+        <!-- End Header -->
+        <!-- Start Filter Sidebar -->
+        <div class="filter-sidebar">
+            <p>Daha fazla göster</p>
+            <hr>
+            <ul class="brands">
+                <li><input class="brands-search" type="text" placeholder="Marka Ara"></li>
+                <li><input id="trendyolmila" type="checkbox"> <label for="trendyolmila"> TRENDYOLMİLLA </label></li>
+                <li><input id="koton" type="checkbox"> <label for="koton"> Koton </label></li>
+                <li><input id="defacto" type="checkbox"> <label for="defacto"> Defacto </label></li>
+                <li><input id="addax" type="checkbox"> <label for="addax"> Addax </label></li>
+                <li><input id="happiness_ist." type="checkbox"> <label for="happiness_ist."> Happiness İst. </label></li>
+                <li><input id="olalook" type="checkbox"> <label for="olalook"> Olalook </label></li>
+                <li><input id="trend_alacati_stili" type="checkbox"> <label for="trend_alacati_stili"> Trend Alaçatı Stili </label></li>
+                
+            </ul>
+            <hr>
+            <ul class="price-search">
+                <li><input class="" type="text" placeholder="En Az"> - <input class="" type="text" placeholder="En Çok"> <button><svg width="19" height="19" viewBox="0 0 19 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M18.7109 17.306L14.027 12.603C15.2255 11.2393 15.8879 9.48658 15.8909 7.671C15.8909 3.441 12.327 0 7.94597 0C3.56499 0 0 3.441 0 7.671C0 11.901 3.56499 15.342 7.94597 15.342C9.56845 15.3483 11.155 14.8645 12.498 13.954L17.2179 18.694C17.4149 18.891 17.6799 19 17.9639 19C18.2339 19 18.4889 18.9 18.6819 18.72C18.7796 18.6308 18.8581 18.5227 18.9127 18.4023C18.9673 18.2819 18.9969 18.1516 18.9997 18.0194C19.0025 17.8872 18.9785 17.7558 18.929 17.6332C18.8795 17.5106 18.8057 17.3993 18.7119 17.306H18.7109ZM7.94597 2.001C11.184 2.001 13.819 4.545 13.819 7.671C13.819 10.798 11.184 13.341 7.94597 13.341C4.70698 13.341 2.07299 10.798 2.07299 7.671C2.07299 4.545 4.70698 2.001 7.94597 2.001Z" fill="white"/>
+                    </svg>
+                    </button></li>
                 <li>
-                    <a href="#">
-                    <img src="./assets/images/top-banner.jpg" class="popular-brands-image" alt="Popular Brand Image">
-                    <span class="popular-brands-text">Sana Özel</span>
-                    </a>
+                    <input id="0-50" type="radio" name="price-search-value"> <label for="0-50"> 0TL - 50TL </label>
                 </li>
                 <li>
-                    <a href="#">
-                    <img src="./assets/images/top-banner.jpg" class="popular-brands-image" alt="Popular Brand Image">
-                    <span class="popular-brands-text">Sen de Al!</span>
-                    </a>
+                    <input id="50-70" type="radio" name="price-search-value"> <label for="50-70"> 50TL - 70TL </label>
                 </li>
                 <li>
-                    <a href="#">
-                    <img src="./assets/images/top-banner.jpg" class="popular-brands-image" alt="Popular Brand Image">
-                    <span class="popular-brands-text">Ev Bakım</span>
-                    </a>
+                    <input id="70-80" type="radio" name="price-search-value"> <label for="70-80"> 70TL - 80TL </label>
                 </li>
                 <li>
-                    <a href="#">
-                    <img src="./assets/images/top-banner.jpg" class="popular-brands-image" alt="Popular Brand Image">
-                    <span class="popular-brands-text">Kişisel Bakım</span>
-                    </a>
+                    <input id="80-90" type="radio" name="price-search-value"> <label for="80-90"> 80TL - 90TL </label>
                 </li>
                 <li>
-                    <a href="#">
-                    <img src="./assets/images/top-banner.jpg" class="popular-brands-image" alt="Popular Brand Image">
-                    <span class="popular-brands-text">İçecek</span>
-                    </a>
+                    <input id="90-125" type="radio" name="price-search-value"> <label for="90-125"> 90TL - 125TL </label>
                 </li>
                 <li>
-                    <a href="#">
-                    <img src="./assets/images/top-banner.jpg" class="popular-brands-image" alt="Popular Brand Image">
-                    <span class="popular-brands-text">Pet Shop</span>
-                    </a>
+                    <input id="125-4000" type="radio" name="price-search-value"> <label for="125-4000"> 125TL - 4000TL </label>
                 </li>
+                
+            </ul>
+            <hr>
+            <ul class="cargo-options">
                 <li>
-                    <a href="#">
-                    <img src="./assets/images/top-banner.jpg" class="popular-brands-image" alt="Popular Brand Image">
-                    <span class="popular-brands-text">Gıda</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                    <img src="./assets/images/top-banner.jpg" class="popular-brands-image" alt="Popular Brand Image">
-                    <span class="popular-brands-text">Sağlık</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                    <img src="./assets/images/top-banner.jpg" class="popular-brands-image" alt="Popular Brand Image">
-                    <span class="popular-brands-text">Doğal Ürünler</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                    <img src="./assets/images/top-banner.jpg" class="popular-brands-image" alt="Popular Brand Image">
-                    <span class="popular-brands-text">Favoriler</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                    <img src="./assets/images/top-banner.jpg" class="popular-brands-image" alt="Popular Brand Image">
-                    <span class="popular-brands-text">Aksesuar</span>
-                    </a>
+                    <input id="free-cargo" type="checkbox"> <label for="free-cargo"> Kargo Bedava </label>
                 </li>
             </ul>
-        </div>    
-    <!--End of Popular Brands Section-->
-    <!-- Start Content -->
-    <section class="content">
-        <div class="content-images">
-            <article class="content-item">
-                <a href="">
-                    <img src="assets/images/content-image.svg" alt="Content Image" />
-                    <div class="content-footer">
-                        <p class="footer-text">
-                            Flaş 500 Ürün Saat & Gözlük
-                        </p>
-                        <p class="footer-text-hover">
-                            Alışverişe Başla
-                            <img src="assets/icons/icon-arrow.svg" alt="Arrow icon" />
-                        </p>
-                    </div>
-                </a>
-            </article>
-            <article class="content-item">
-                <a href="">
-                    <img src="assets/images/content-image.svg" alt="Content Image" />
-                    <div class="content-footer">
-                        <p class="footer-text">
-                            Saatte Dev İndirim
-                        </p>
-                        <p class="footer-text-hover">
-                            Alışverişe Başla
-                            <img src="assets/icons/icon-arrow.svg" alt="Arrow icon" />
-                        </p>
-                    </div>
-                </a>
-            </article>
         </div>
-        <aside class="content-sidebar">
-            <article class="content-sidebar-item">
-                <a href="">
-                    <img src="assets/images/content-image-sidebar.svg" alt="Content Sidebar Image" class="right-image-content" />
-                </a>
-            </article>
-            <article class="content-sidebar-item">
-                <a href="">
-                    <img src="assets/images/content-image-sidebar.svg" alt="Content Sidebar Image" class="right-image-content" />
-                </a>
-            </article>
-        </aside>
-    </section>
-    <!-- End Content -->
-
+        <!-- End Filter Sidebar -->
     <!-- Start Footer -->
     <footer>
         <p>
