--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
 <body>
     <!-- start container -->
     <div class="container">
+
         <!-- top banner -->
         <section class="top-banner">
             <img src="assets/images/top-banner.jpg" alt="Trendyol üst kampanya banner">
         </section>
         <!-- top banner -->
+
         <!-- start header -->
         <header>
             <div class="header-links">
@@ -1165,6 +1167,7 @@
             </div>
         </header>
         <!-- end header -->
+
         <!--Popular Brands Section-->
         <div class="popular-brands">
             <ul class="popular-brands-list">
@@ -1246,7 +1249,6 @@
                     </a>
                 </li>
             </ul>
-<<<<<<< HEAD
         </div>
         <!--End of Popular Brands Section-->
 
@@ -1254,7 +1256,7 @@
         <main class="content">
             <div class="content-items">
                 <article class="content-item">
-                    <a href="">
+                    <a href="/">
                         <img src="assets/images/content-image.svg" alt="Content Image" />
                         <div class="content-footer">
                             <p class="footer-text">
@@ -1267,7 +1269,7 @@
                     </a>
                 </article>
                 <article class="content-item">
-                    <a href="">
+                    <a href="/">
                         <img src="assets/images/content-image.svg" alt="Content Image" />
                         <div class="content-footer">
                             <p class="footer-text">
@@ -1305,66 +1307,7 @@
         </footer>
         <!-- End Footer -->
     </div>
-=======
-        </div>    
-    <!--End of Popular Brands Section-->
-    <!-- Start Content -->
-    <section class="content">
-        <div class="content-images">
-            <article class="content-item">
-                <a href="">
-                    <img src="assets/images/content-image.svg" alt="Content Image" />
-                    <div class="content-footer">
-                        <p class="footer-text">
-                            Flaş 500 Ürün Saat & Gözlük
-                        </p>
-                        <p class="footer-text-hover">
-                            Alışverişe Başla
-                            <img src="assets/icons/icon-arrow.svg" alt="Arrow icon" />
-                        </p>
-                    </div>
-                </a>
-            </article>
-            <article class="content-item">
-                <a href="">
-                    <img src="assets/images/content-image.svg" alt="Content Image" />
-                    <div class="content-footer">
-                        <p class="footer-text">
-                            Saatte Dev İndirim
-                        </p>
-                        <p class="footer-text-hover">
-                            Alışverişe Başla
-                            <img src="assets/icons/icon-arrow.svg" alt="Arrow icon" />
-                        </p>
-                    </div>
-                </a>
-            </article>
-        </div>
-        <aside class="content-sidebar">
-            <article class="content-sidebar-item">
-                <a href="">
-                    <img src="assets/images/content-image-sidebar.svg" alt="Content Sidebar Image" class="right-image-content" />
-                </a>
-            </article>
-            <article class="content-sidebar-item">
-                <a href="">
-                    <img src="assets/images/content-image-sidebar.svg" alt="Content Sidebar Image" class="right-image-content" />
-                </a>
-            </article>
-        </aside>
-    </section>
-    <!-- End Content -->
-
-    <!-- Start Footer -->
-    <footer>
-        <p>
-            
-        </p>
-    </footer>
-    <!-- End Footer -->
-</div>
-<!-- End Container -->
->>>>>>> 2ec80ef14920be457f976f3e05776e8165a610a7
+    <!-- End Container -->
 </body>
 
 </html>
