Main content is ready for review

--- a/index.html
+++ b/index.html
@@ -1252,52 +1252,73 @@
         </div>
         <!--End of Popular Brands Section-->
 
-        <!--Content Section-->
-        <main class="content">
-            <div class="content-items">
-                <article class="content-item">
+        <!-- Start Content -->
+        <main class="main-content">
+
+            <!-- Start Content Items -->
+            <div class="main-content-items">
+
+                <!-- Start Content Item -->
+                <article class="main-content-item">
                     <a href="/">
                         <img src="assets/images/content-image.svg" alt="Content Image" />
-                        <div class="content-footer">
-                            <p class="footer-text">
+                        <div class="main-content-footer">
+                            <p class="main-content-footer-text">
                                 Flaş 500 Ürün Saat & Gözlük
                             </p>
-                            <p class="footer-text-hover">
+                            <p class="main-content-footer-text-hover">
                                 <img src="assets/icons/icon-arrow.svg" alt="Arrow icon" />
                             </p>
                         </div>
                     </a>
                 </article>
-                <article class="content-item">
+                <!-- End Content Item -->
+
+                <!-- Start Content Item -->
+                <article class="main-content-item">
                     <a href="/">
                         <img src="assets/images/content-image.svg" alt="Content Image" />
-                        <div class="content-footer">
-                            <p class="footer-text">
+                        <div class="main-content-footer">
+                            <p class="main-content-footer-text">
                                 Saatte Dev İndirim
                             </p>
-                            <p class="footer-text-hover">
+                            <p class="main-content-footer-text-hover">
                                 <img src="assets/icons/icon-arrow.svg" alt="Arrow icon" />
                             </p>
                         </div>
                     </a>
                 </article>
+                <!-- End Content Item -->
+
             </div>
-            <aside class="content-sidebar">
-                <article class="content-sidebar-item">
-                    <a href="">
+            <!-- End Content Items -->
+
+            <!-- Start Sidebar -->
+            <aside class="main-content-sidebar">
+
+                <!-- Start Sidebar Item -->
+                <article class="main-content-sidebar-item">
+                    <a href="/">
                         <img src="assets/images/content-image-sidebar.svg" alt="Content Sidebar Image"
-                            class="right-image-content" />
+                            class="main-content-sidebar-image" />
                     </a>
                 </article>
-                <article class="content-sidebar-item">
-                    <a href="">
+                <!-- End Sidebar Item -->
+
+                <!-- Start Sidebar Item -->
+                <article class="main-content-sidebar-item">
+                    <a href="/">
                         <img src="assets/images/content-image-sidebar.svg" alt="Content Sidebar Image"
-                            class="right-image-content" />
+                            class="main-content-sidebar-image" />
                     </a>
                 </article>
+                <!-- End Sidebar Item -->
+                
             </aside>
+            <!-- End Sidebar -->
+
         </main>
-        <!--End of Content Section-->
+        <!-- End Content -->
 
         <!-- Start Footer -->
         <footer>
@@ -1306,6 +1327,7 @@
             </p>
         </footer>
         <!-- End Footer -->
+
     </div>
     <!-- End Container -->
 </body>
