--- a/index.html
+++ b/index.html
@@ -1098,6 +1098,53 @@
                     </ul>
                 </div>    
             <!--End of Popular Brands Section-->
+         
+
+            <div class="side-bar-filters">
+                <div class="breadcrumb">
+                    <a href="#" class="breadcrumb-item">Anasayfa</a>
+                    <svg width="7" height="12" viewBox="0 0 7 12" fill="none"
+                            xmlns="http://www.w3.org/2000/svg" >
+                            <path fill-rule="evenodd" clip-rule="evenodd"
+                                d="M4.89284 5.97711L1.1733 1.85313C0.997273 1.65796 0.997273 1.34154 1.1733 1.14637C1.34932 0.951209 1.63472 0.951209 1.81075 1.14637L5.84377 5.61789C5.87996 5.65801 5.9087 5.70328 5.93001 5.75155C6.0349 5.9126 6.02196 6.13875 5.89119 6.28373L1.7463 10.8793C1.60117 11.0402 1.36591 11.0402 1.22078 10.8793L1.10885 10.7553C0.963718 10.5944 0.963718 10.3335 1.10885 10.1726L4.89284 5.97711Z"
+                                fill="#FF671D" stroke="#FF671D" />
+                    </svg>
+                    <a href="#" class="breadcrumb-item">Kadın</a>
+                    <svg width="7" height="12" viewBox="0 0 7 12" fill="none" xmlns="http://www.w3.org/2000/svg" >
+                        <path fill-rule="evenodd" clip-rule="evenodd"
+                            d="M4.89284 5.97711L1.1733 1.85313C0.997273 1.65796 0.997273 1.34154 1.1733 1.14637C1.34932 0.951209 1.63472 0.951209 1.81075 1.14637L5.84377 5.61789C5.87996 5.65801 5.9087 5.70328 5.93001 5.75155C6.0349 5.9126 6.02196 6.13875 5.89119 6.28373L1.7463 10.8793C1.60117 11.0402 1.36591 11.0402 1.22078 10.8793L1.10885 10.7553C0.963718 10.5944 0.963718 10.3335 1.10885 10.1726L4.89284 5.97711Z"
+                            fill="#FF671D" stroke="#FF671D" />
+                    </svg>
+                    <a href="#" class="breadcrumb-item">Giyim</a>
+                </div>
+                <div class="filter-related-categories">
+                    <h2 class="side-bar-headings">İlgili Kategoriler</h2>
+                    <a href="#">T-shirt</a>
+                    <a href="#">Elbise</a>
+                    <a href="#">Bluz&Tunik&Büstiyer</a>
+                    <a href="#">Jeans</a>
+                    <a href="#">Gömlek</a>
+                    <button class="show-more">DAHA FAZLA GÖSTER</button>
+                </div>
+                <hr>
+                <div class="sale-products">
+                    <h2 class="side-bar-headings">Fırsat Ürünleri</h2>
+                    <a href="#" class="filter-wrapper">
+                        <input type="checkbox" name="product-four-star" id="product-four-star">
+                        <label for="product-four-star">4 Yıldızlı Fırsat Ürünleri</label>
+                    </a>
+                    <a href="#" class="filter-wrapper">
+                        <input type="checkbox" name="product-three-star" id="product-three-star">
+                        <label for="product-three-star">3 Yıldızlı Fırsat Ürünleri</label>
+                    </a>
+                    <a href="#" class="filter-wrapper">
+                        <input type="checkbox" name="product-two-star" id="product-two-star">
+                        <label for="product-two-star">2 Yıldızlı Fırsat Ürünleri</label>
+                    </a>
+                </div>
+                <hr>
+            </div>
         </div>
+
 </body>
 </html>
