product-page updated

--- a/product.html
+++ b/product.html
@@ -195,7 +195,7 @@
                     </ul>
                 </nav>
                 <div class="categories">
-                    <ul class="main-categories">
+                     <ul class="main-categories">
                         <li class="kadin-list"><a href="#" class="categories-listed-items">KADIN</a>
                             <div class="kadin-list-wrapper wrapper-mega-menu">
                                 <div class="menu-column">
@@ -1163,6 +1163,7 @@
         </header>
     </div>
     <!--sayfa geneli 1200px-->
+
     <div class="main-area-container">
         <!-- start breadcrumbs-->
         <div class="breadcrumb">
@@ -1197,18 +1198,18 @@
                 <hr>
                 <div class="sale-products">
                     <h2 class="side-bar-headings">Fırsat Ürünleri</h2>
-                    <a href="#" class="filter-wrapper">
-                        <input type="checkbox" name="product-four-star" id="product-four-star">
-                        <label for="product-four-star">4 Yıldızlı Fırsat Ürünleri</label>
-                    </a>
-                    <a href="#" class="filter-wrapper">
-                        <input type="checkbox" name="product-three-star" id="product-three-star">
-                        <label for="product-three-star">3 Yıldızlı Fırsat Ürünleri</label>
-                    </a>
-                    <a href="#" class="filter-wrapper">
-                        <input type="checkbox" name="product-two-star" id="product-two-star">
-                        <label for="product-two-star">2 Yıldızlı Fırsat Ürünleri</label>
-                    </a>
+                    <label class="orange-checkbox-label">4 Yıldızlı Fırsat Ürünleri
+                        <input type="checkbox" />
+                        <span class="checkmark"></span>
+                    </label>
+                    <label class="orange-checkbox-label">3 Yıldızlı Fırsat Ürünleri
+                        <input type="checkbox" />
+                        <span class="checkmark"></span>
+                    </label>
+                    <label class="orange-checkbox-label">2 Yıldızlı Fırsat Ürünleri
+                        <input type="checkbox" />
+                        <span class="checkmark"></span>
+                    </label>
                 </div>
                 <hr />
                 <div class="brands">
